# opengl-sample

./: .gitignore  CMakeLists.txt
src/: GLMain.cpp  GLMain.h  main.cpp  pch.h
src/shader/: Frag.shader  Vertex.shader
